# lab33

./: CMakeLists.txt  README.md
formatter_ex/: CMakeLists.txt  formatter_ex.cpp
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
